# PyGlitch

./: README.md  pyproject.toml  run.py  run_tests.py
src/pyglitch/: config.py  effect.py  generator.py  main.py  utils.py
src/tests/: test_glitch_config.py  test_glitch_effect.py  test_glitch_gif_generator.py
