[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglitch"
version = "0.1.0"
description = "A Python library to apply glitch effects to images and generate glitch GIFs."
authors = [
    { name = "Alper Karaca", email = "" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "imageio>=2.15.0",
]

[project.scripts]
pyglitch = "pyglitch.main:main"

[project.urls]
Homepage = "https://github.com/thealper/pyglitch"
Repository = "https://github.com/thealper/pyglitch"
Bug Tracker = "https://github.com/thealper/pyglitch/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyglitch = ["*.txt", "*.json", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''